Update and rename 2025-01-25-本网站已更新.md to 2025-01-25-功能更新（1.1）.md

--- a/_posts/2025-01-25-功能更新（1.1）.md
+++ b/_posts/2025-01-25-功能更新（1.1）.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      本网站已更新
-subtitle:   本网站已更新
+title:      2025.1.25 功能更新（1.1）
+subtitle:   功能更新（1.1）
 date:       2025-1-25
 author:     TigerXiaoxi
 header-img: img/the-first.png
@@ -11,15 +11,9 @@ tags:
 ---
 
 
-# 本网站已更新
+# 第一次功能更新（1.1）
 
-本网站目前已经更新，本次更新主要更新了新的功能。
-
-
-
-
-
-[天气模块](https://tigerxiaoxi.github.io/weather/)
+本次更新主要更新了新的两个功能。
 
 [思维导图模块](https://tigerxiaoxi.github.io/mind-map/#/)
 
